--- a/src/style/styleGeneral.module.css
+++ b/src/style/styleGeneral.module.css
@@ -1,28 +1,28 @@
-.main{
-    display: flex;
-    flex-direction: column;
+.main {
+  display: flex;
+  flex-direction: column;
 }
 
-.view{
-    height: 85vh;
-    width: -webkit-fill-available;
-    max-width: 950px;
-    margin: 12vh 0 0 auto;
+.view {
+  height: 85vh;
+  width: -webkit-fill-available;
+  max-width: 950px;
+  margin: 12vh 0 0 auto;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    
-    overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2rem;
-    position: relative;
+  overflow-y: scroll;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
+  position: relative;
 }
 
 @media {
-  .view{
+  .view {
     height: 82vh;
   }
 }
@@ -42,16 +42,16 @@
   hyphens: auto;
 }
 
-.hidden{
-    visibility: hidden;
+.hidden {
+  visibility: hidden;
 }
 
-.show{
-    visibility: visible;
+.show {
+  visibility: visible;
 }
 
-.scrollable{
-    overflow-y: scroll;
+.scrollable {
+  overflow-y: scroll;
 }
 
 ::-webkit-scrollbar {
@@ -59,21 +59,34 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #636262; 
+  background: #636262;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #272626; 
+  background: #272626;
 }
 
-.flexCenter{
+.flexCenter {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.rocky {
+  background-image: url("../assets/textures/buried.png");
+}
+.denin {
+  background-image: url("../assets/textures/dark-denim.png");
+}
+.wood {
+  background-image: url("../assets/textures/dark-wood.png");
+}
+.noise {
+  background-image: url("../assets/textures/broken-noise.png");
 }
