--- a/src/components/UI/mainNewsCard/mainNews.module.css
+++ b/src/components/UI/mainNewsCard/mainNews.module.css
@@ -1,159 +1,155 @@
-
-:root{
-    --CardContentHeight: 150px;
+:root {
+  --CardContentHeight: 150px;
 }
 
-.mainNewsCardContainer{
-    background-color: rgb(240,240,240);
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0 0 5px black;
-    margin: 5px;
-    width: 90vw;
-    max-width: 895px;
-    margin-top: 20px;
+.mainNewsCardContainer {
+  background-color: rgb(240, 240, 240);
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 0 5px black;
+  margin: 5px;
+  width: 90vw;
+  max-width: 895px;
+  margin-top: 20px;
 }
 
-.mainNews{
-    overflow: hidden;
-    /*background-image: linear-gradient(45deg, #eaafc8, #654ea3);*/
-    background-image: linear-gradient(45deg, #a00101, #ff0505, white, #4502ff, #240283);
-    
-    /* display: flex;
+.mainNews {
+  overflow: hidden;
+  /*background-image: linear-gradient(45deg, #eaafc8, #654ea3);*/
+  /* background-image: linear-gradient(45deg, #a00101, #ff0505, white, #4502ff, #240283); */
+  background-image: url("../../../assets/textures/light-aluminum.png"),
+    linear-gradient(45deg, #a00101, #ff0505, white, #4502ff, #240283);
+  /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between; */
 }
 
-.mainNewsCardImg{
-    width: 115%;
+.mainNewsCardImg {
+  width: 115%;
 }
 
-.mainNewsContent{
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    
+.mainNewsContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 /*take this from newsCard*/
-a{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-.newsCardImgContainer{
-    background-color: #060606;
-    height: var(--CardContentHeight);
-    width: 30%;
+.newsCardImgContainer {
+  background-color: #060606;
+  height: var(--CardContentHeight);
+  width: 30%;
 
-    overflow: hidden;
-    position: relative;
+  overflow: hidden;
+  position: relative;
 }
 
-.newsCardImg{
-    /* max-height: 100%;*/
-    width: 100%;
-    min-height: var(--CardContentHeight);
-    /* vertical-align: middle; */
-    object-fit: cover;
-    object-position: center;
+.newsCardImg {
+  /* max-height: 100%;*/
+  width: 100%;
+  min-height: var(--CardContentHeight);
+  /* vertical-align: middle; */
+  object-fit: cover;
+  object-position: center;
 }
 
-.maincontentContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    width: 100%;
+.maincontentContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
 }
-.newsCardTitle{
-    font-size: 2.2vw;
-    color: black;
-    text-shadow: 0 0 5px rgb(252, 252, 252);
-    text-transform: capitalize;
+.newsCardTitle {
+  font-size: 2.2vw;
+  color: black;
+  text-shadow: 0 0 5px rgb(252, 252, 252);
+  text-transform: capitalize;
 }
 
-.mainNewsCardTitle{
-    font-size: 5.2vw;
-    color: black;
-    text-shadow: 0 0 5px rgb(252, 252, 252);
-    text-transform: capitalize;
+.mainNewsCardTitle {
+  font-size: 5.2vw;
+  color: black;
+  text-shadow: 0 0 5px rgb(252, 252, 252);
+  text-transform: capitalize;
 }
 
 @media screen and (min-width: 1600px) {
-    .mainNewsCardTitle {
-       font-size: 50px;
-    }
+  .mainNewsCardTitle {
+    font-size: 50px;
+  }
+}
+
+.line {
+  border-style: solid;
+  border-color: rgb(161, 2, 2);
+  border-width: 3px;
+  width: 100%;
+}
+.heading {
+  font-size: 12px;
+  text-transform: capitalize;
+  display: flex;
+}
+.date {
+  font-size: 10px;
+}
+.adminTools {
+  width: 70px;
+
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .newsCard {
+    height: 100px;
   }
 
-.line{
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  .newsCardImg {
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .contentContainer {
+    padding: 10px;
+    width: 100%;
+  }
+
+  .newsCardTitle {
+    font-size: 16px;
+    color: black;
+    text-shadow: 0 0 5px rgb(252, 252, 252);
+    text-transform: capitalize;
+  }
+
+  .line {
     border-style: solid;
     border-color: rgb(161, 2, 2);
     border-width: 3px;
-    width: 100%;
-}
-.heading{
+  }
+  .heading {
     font-size: 12px;
     text-transform: capitalize;
     display: flex;
-}
-.date{
-    font-size:10px;
-}
-.adminTools{
-    width: 70px;
-
-    position: absolute;
-    right:10px;
-    bottom: 10px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-@media only screen and (max-width: 768px) {
-
-    .newsCard{
-        height:  100px;
-    }
-    
-    a{
-        text-decoration: none;
-        color: black;
-    }
-
-    .newsCardImg{
-        object-fit: cover;
-        object-position: center;
-    }
-
-    .contentContainer{
-        padding: 10px;
-        width: 100%;
-    }
-
-    .newsCardTitle{
-        font-size: 16px;
-        color: black;
-        text-shadow: 0 0 5px rgb(252, 252, 252);
-        text-transform: capitalize;
-    }
-
-    .line{
-        border-style: solid;
-        border-color: rgb(161, 2, 2);
-        border-width: 3px;
-    }
-    .heading{
-        font-size: 12px;
-        text-transform: capitalize;
-        display: flex;
-    }
-    .date{
-        font-size:10px;
-    }
+  }
+  .date {
+    font-size: 10px;
+  }
 }
