--- a/src/components/footerStyle.module.css
+++ b/src/components/footerStyle.module.css
@@ -1,43 +1,38 @@
 .footer,
-.darkFooter{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    bottom: 0;
-    width: 100vw;
-    font-size:xx-small;
-}
-.footer{
-    background-color: rgb(199, 197, 197);
-}
-
-.darkFooter{
-    background-color: rgb(43,43,43);
-    box-shadow:2px 2px 5px white;
+.darkFooter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  font-size: xx-small;
+  background-image: url("../assets/textures/buried.png");
+  color: white;
+  background-color: rgb(43, 43, 43);
 }
 
-.some{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 90vw;
-    max-width: 750px;
+.some {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 90vw;
+  max-width: 750px;
 }
 
 .f,
 .ig,
 .yt,
 .twitter,
-.img{
-    aspect-ratio: 3/2;
-    object-fit: contain;
-    /* mix-blend-mode: color-burn; */
-    height: 20px;
-    width: 20px;
-    color: white;
-    overflow: hidden;
-    border-radius: 3px;
+.img {
+  aspect-ratio: 3/2;
+  object-fit: contain;
+  /* mix-blend-mode: color-burn; */
+  height: 20px;
+  width: 20px;
+  color: white;
+  overflow: hidden;
+  border-radius: 3px;
 }
