--- a/src/components/views/about/styleAbout.module.css
+++ b/src/components/views/about/styleAbout.module.css
@@ -1,21 +1,40 @@
-.aboutSubjects{
-    font-size: 1.3rem;
-    font-weight: 700;
+.aboutSubjects {
+  font-size: 1.3rem;
+  font-weight: 700;
 }
 
-.installingTitle{
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-bottom: 10px;
-    text-align: center;
+.installingTitle {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+  text-align: center;
 }
-.installImg{
-    width: 200px;
+.installImg {
+  width: 200px;
 }
 
-.list{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+.list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.aboutPageDark,
+.aboutPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  max-width: 800px;
+}
+
+.aboutPage {
+  background-color: white;
+  color: #252525;
+}
+
+.aboutPage {
+  background-color: #252525;
+  color: white;
 }
