about text page refactor

--- a/src/components/views/termsAndConditions/termsAndCands.module.css
+++ b/src/components/views/termsAndConditions/termsAndCands.module.css
@@ -1,7 +1,3 @@
-.termsAndCondStyle {
-}
-.termsAndCondList {
-  list-style-type: square;
-}
-.termsAndCondStyle {
+.termsAndCondStyle ul {
+  list-style-type: none;
 }
