--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,3 +1,11 @@
+:root {
+  --grey05: #1b212b;
+  --grey04: #212b35;
+  --grey03: #2e3a48;
+  --grey02: #495262;
+  --grey01: #4c5564;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +14,7 @@
 
 body {
   height: 100vh;
-  background-image: url("../assets/textures/dark-wood.png");
+  /* background-image: url("../assets/textures/dark-wood.png"); */
 }
 
 .darkBody {
