--- a/src/style/styleGeneral.module.css
+++ b/src/style/styleGeneral.module.css
@@ -24,14 +24,15 @@
 
 .textPageDark,
 .textPage {
-  padding: 0 30px;
+  padding: 10px 30px 50px 30px;
   min-height: 75vh;
-  padding-bottom: 50px;
   z-index: 0;
 }
 
 .textPageDark ul,
-.textPage ul {
+.textPage ul,
+.textPageDark ol,
+.textPage ol {
   list-style-type: none;
 }
 
@@ -104,7 +105,7 @@
 .rocky {
   background-image: url("../assets/textures/buried.png");
 }
-.denin {
+/* .denin {
   background-image: url("../assets/textures/dark-denim.png");
 }
 .wood {
@@ -112,4 +113,4 @@
 }
 .noise {
   background-image: url("../assets/textures/broken-noise.png");
-}
+} */
