--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,3 +1,5 @@
+@import "./varibles.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +8,6 @@
 
 body {
   height: 100vh;
-  /* background-image: url("../assets/textures/dark-wood.png"); */
 }
 
 .darkBody {
